# discord-bot-template

./: .gitignore  README.md  pyproject.toml
src/discord_bot_template/: __init__.py  __main__.py
src/discord_bot_template/extensions/: honk.py
